fixing from rollback changes

--- a/TODO.TXT
+++ b/TODO.TXT
@@ -6,4 +6,4 @@ Add filter to courses page (by grade or dept)
 Filter students - last name, grade, age
 student comments
 student pictures
-   
+this is a cests
